--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,9 +17,10 @@
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="Music App"
         android:id="@+id/mainTextView"
-        android:textColor="@color/abc_background_cache_hint_selector_material_light"
+        android:textColor="@color/abc_primary_text_disable_only_material_dark"
         android:textSize="28sp"
         android:fontFamily="@string/abc_action_bar_home_description"
+        android:layout_marginTop="49dp"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true" />
 
