--- a/app/src/main/res/layout/activity_host.xml
+++ b/app/src/main/res/layout/activity_host.xml
@@ -8,6 +8,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="western.musicapp.HostActivity">
+    tools:context="western.musicapp.HostActivity"
+    android:background="@android:color/holo_blue_dark">
 
 </RelativeLayout>
